@@ -1,3 +1,7 @@
+17 April 2009: Wouter
+	- Fix reentrant in minievent handler for unix. Could have resulted
+	  in spurious event callbacks.
+
 16 April 2009: Wouter
 	- winsock event handler exit very quickly on signal, even if
 	  under heavy load.
